<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".BookInfoActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/book_image"
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:src="@drawable/baseline_book_24" />

            <TextView
                android:id="@+id/book_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title" />

            <TextView
                android:id="@+id/book_author"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/authors" />

            <TextView
                android:id="@+id/book_publisher"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/publishers" />

            <TextView
                android:id="@+id/book_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dates" />

            <TextView
                android:id="@+id/book_lang"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/languages" />

            <TextView
                android:id="@+id/book_isbn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/isbns" />
        </LinearLayout>
    </ScrollView>



</LinearLayout>